--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.0",
+        "bootstrap-vue": "^2.23.1",
         "core-js": "^3.8.3",
         "sass": "^1.63.3",
         "sass-loader": "^13.3.2",
@@ -23,6 +24,7 @@
         "@vue/cli-plugin-babel": "~5.0.0",
         "@vue/cli-plugin-eslint": "~5.0.0",
         "@vue/cli-service": "~5.0.0",
+        "@vue/runtime-dom": "^3.3.4",
         "autoprefixer": "^10.4.14",
         "eslint": "^7.32.0",
         "eslint-plugin-vue": "^8.0.3",
