--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
+        "@vue/compat": "^3.3.4",
         "bootstrap": "^5.3.0",
         "bootstrap-vue": "^2.23.1",
         "core-js": "^3.8.3",
@@ -16,21 +17,21 @@
         "sass-loader": "^13.3.2",
         "ts-loader": "^9.4.3",
         "typescript": "^5.1.3",
-        "vue": "^2.6.14"
+        "vue": "^3.3.4"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
         "@babel/eslint-parser": "^7.12.16",
-        "@vue/cli-plugin-babel": "~5.0.0",
-        "@vue/cli-plugin-eslint": "~5.0.0",
-        "@vue/cli-service": "~5.0.0",
+        "@vue/cli-plugin-babel": "~5.0.8",
+        "@vue/cli-plugin-eslint": "~5.0.8",
+        "@vue/cli-service": "~5.0.8",
+        "@vue/compiler-sfc": "^3.3.4",
         "@vue/runtime-dom": "^3.3.4",
         "autoprefixer": "^10.4.14",
         "eslint": "^7.32.0",
         "eslint-plugin-vue": "^8.0.3",
         "postcss": "^8.4.24",
-        "tailwindcss": "^3.3.2",
-        "vue-template-compiler": "^2.6.14"
+        "tailwindcss": "^3.3.2"
     },
     "eslintConfig": {
         "root": true,
